--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "fast-xml-parser": "^4.0.0-beta.8",
     "lodash": "^4.17.21",
     "ramda": "^0.27.1"
   },
